syntax = "proto3";
package pob.abci.v1;

option go_package = "github.com/skip-mev/pob/abci";

// AuctionInfo contains information about the top of block auction
// that was run in PrepareProposal using vote extensions.
message AuctionInfo {
    // extended_commit_info contains the vote extensions that were used to run the auction.
    bytes extended_commit_info = 1;

    // max_tx_bytes is the maximum number of bytes that were allowed for the proposal.
    int64 max_tx_bytes = 2;

    // num_txs is the number of transactions that were included in the proposal.
    uint64 num_txs = 3;
}